--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   <!-- Dropdown for the hamburger menu -->
   <div id="menuLinks" class="w3-top w3-center w3-bar-block w3-black w3-hide hamburgerMenu w3-animate-opacity">
     <a href="index.html" id="currentPage" class="w3-bar-item topNavLinks">Home</a>
-    <a href="team.html" class="w3-bar-item topNavLinks">Games</a>
-    <a href="jobs.html" class="w3-bar-item topNavLinks">Teams</a>
+    <a href="games.html" class="w3-bar-item topNavLinks">Games</a>
+    <a href="team.html" class="w3-bar-item topNavLinks">Teams</a>
     <a href="contact.html" class="w3-bar-item topNavLinks">Contact</a>
   </div>
 
@@ -46,16 +46,16 @@
     <a href="javascript:void(0)" id="hamburgerMenu" class="w3-bar-item w3-right topNavButton"
       onclick="myFunction()">&#9776;</a>
     <!-- Logo -->
-    <a href="index.html w3-hide-small" class="w3-left w3-hide-small w3-hide-medium"><img id="logoNav" src="Logos/Logo.png" alt="Hot Beans Web logo and name."></a>
-    <a href="index.html w3-hide-large w3-hide-medium" class="w3-left"><img id="logoNav" style="margin-top:-47px;" src="Logos/Logo.png" alt="Hot Beans Web logo and name."></a>
+    <a href="index.html w3-hide-small" class="w3-left w3-hide-small w3-hide-medium"><img id="logoNav" src="Astral Forge_Dark Horizontal Flat.svg" alt="Astral Forge Logo and Name."></a>
+    <a href="index.html w3-hide-large w3-hide-medium" class="w3-left"><img id="logoNav" style="margin-top:-47px;" src="Astral Forge_Dark Horizontal Flat.svg" alt="Astral Forge Logo and Name."></a>
     <!-- Aligns the links to the right and hides them on a small page -->
     <div class="w3-right w3-hide-small">
       <!-- Home -->
       <a id="currentPage" class="w3-bar-item topNavLinks" href="index.html">Home</a>
       <!-- Team -->
-      <a class="w3-bar-item topNavLinks" href="team.html">Team</a>
+      <a class="w3-bar-item topNavLinks" href="games.html">Games</a>
       <!-- Jobs -->
-      <a class="w3-bar-item topNavLinks" href="jobs.html">Jobs</a>
+      <a class="w3-bar-item topNavLinks" href="team.html">Team</a>
       <!-- Contact -->
       <a class="w3-bar-item topNavLinks" href="contact.html">Contact</a>
     </div>
@@ -79,7 +79,7 @@
   </header>
 
   <!-- Company Moto -->
-  <h3 class="w3-center" style="font-size:35px;"><b><i>Developed with passion. Designed for you. Tailored to everyone.</i></b></h3>
+  <h3 class="w3-center" style="font-size:35px;"><b><i>Creating immersive story-driven worlds for our players to explore and enjoy!</i></b></h3>
 
   <div class="w3-row">
     <!-- Side Picture -->
@@ -184,7 +184,7 @@
     <div class="w3-col w3-container w3-third"></div>
     <div class="w3-col w3-container w3-third w3-center">
       <!-- Logo -->
-      <a href="index.html"><img class="logoFooter" src="Logos/Logo.png" alt="Hot Beans Web logo and name."></a>
+      <a href="index.html"><img class="logoFooter" src="Astral Forge_Dark Vertical Flat.svg" alt="Astral Forge Logo and Name."></a>
     </div>
     <div class="w3-col w3-container w3-third" style="height:70px;"></div>
 
@@ -199,7 +199,7 @@
       <!-- Social -->
       <h2 class="headingFooter"><b>SOCIAL</b></h2>
       <!-- Large screens -->
-      <a class="w3-hide-small" href="https://beacons.ai/HotBeansWeb" target="_blank"><img class="socialFooterLarge" src="PagePhotos/FooterSocial.png" alt="Links to social media pages."></a>
+      <a class="w3-hide-small" href="https://beacons.ai/AstralForge" target="_blank"><img class="socialFooterLarge" src="PagePhotos/FooterSocial.png" alt="Links to social media pages."></a>
       <!-- Small/medium screens -->
       <a class="w3-hide-large w3-hide-medium" href="https://beacons.ai/HotBeansWeb" target="_blank"><img class="socialFooterSmall" src="PagePhotos/FooterSocial.png" alt="Links to social media pages."></a>
     </div>
