--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <title>Astral Forge - Home</title>
 
   <!-- Adding a favicon -->
-  <link rel="icon" type="image/x-icon" href="Astral Forge_Dark Vertical Flat.svg">
+  <link rel="icon" type="image/x-icon" href="Images /Astral Forge_Dark Vertical Flat.svg">
   <!-- Adding an apple touch icon -->
-  <link rel="apple-touch-icon" href="Astral Forge_Dark Vertical Flat.svg">
+  <link rel="apple-touch-icon" href="Images /Astral Forge_Dark Vertical Flat.svg">
 
   <!-- Adding the css style sheets -->
   <link href="style.css" rel="stylesheet" type="text/css" />
