--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="w3-col w3-container l8">
       <h1 class="w3-hide-small" style="font-size:30px;"><b>ABOUT US</b></h1>
       <h2 class="w3-hide-large w3-hide-medium w3-center" style="font-size:30px;"><b>ABOUT US</b></h2>
-      <p style="font-size:20px;">With over 15 years in the industry, Hot Beans Web is an ever-growing studio located in England. Built out of a passion for web development, we have worked with clients from all over the globe to produce top quality, custom websites that are uniquely tailored to them. Our dedicated team work closely with each client in creating their personalised site so that we can find solutions that allow us to provide a complete solution maximising the experience, design, and overall use of the website. As a studio, we have one mission; to create the best websites possible. We want to give everyone the chance to have a website that allows themselves or their business to display their story and mission to global audiences without losing any of the attention to detail that make us who we are today.</p>
+      <p style="font-size:20px;">Astral Forge is made up of a team of graduates from the University of Staffordshire and we are working to create immersive story-driven worlds for our players to explore and enjoy. We are a group of friends striving to put their mark on the games industry through our passion and dedication to the craft. Our team consists of programmers, designers, animators, artists, and more who are all experts in their area and are excited to show what they can do in a professional setting.</p>
     </div>
   </div>
 
@@ -117,9 +117,8 @@
   <br>
 
   <!-- Section header -->
-  <h2 class="w3-center" style="font-size:30px;"><b>WELCOME TO HOT BEANS WEB,</b></h2>
-  <p class="w3-center" style="font-size:25px; margin-top:-10px;">the industry leader in creating websites to global
-    audiences for any occasion.</p>
+  <h2 class="w3-center" style="font-size:30px;"><b>WELCOME TO ASTRAL FORGE,</b></h2>
+  <p class="w3-center" style="font-size:25px; margin-top:-10px;">An indie company working to create fantasy worlds for our audiences to enjoy.</p>
 
   <!-- 3 section headings -->
   <div class="w3-container">
@@ -131,10 +130,9 @@
       <br class="w3-hide-large"><br class="w3-hide-large">
 
       <!-- Content description -->
-      <p style="font-size:20px;">Established in 2007, located in Essex (HQ) and London, England, Hot Beans Web was born
-        out of a raw passion for web development.</p>
-      <p style="font-size:17px;">The studio’s founders: Lauren D and Leah F, both pioneers in website development,
-        decided to employ their industry experience, and in 2007, Hot Beans Web was born.</p>
+      <p style="font-size:20px;">Established in 2025, remotely located across England, Astral Forge was born
+        out of a raw passion for video game development.</p>
+      <p style="font-size:17px;">The studio was created to allow our players to escape from reality and find worlds that truly feel like home. The sort of spaces that you would only find in the stars.</p>
       <!-- Read More button -->
       <a class="w3-round readMoreButton" href="index.html">Read More</a>
     </div>
@@ -149,8 +147,8 @@
       <!-- Content description -->
       <p style="font-size:20px;">There is an inner fire, fuelled in every member of the studio. It comes from what we
         surround ourselves with, from the hobbies we enjoy, from where we live, and who we are accompanied by.</p>
-      <p style="font-size:17px;">We want to hone that inner fire and make it grow. It’s what makes us and the websites
-        we create so unique. As a studio, we have one mission: making the best websites possible.</p>
+      <p style="font-size:17px;">We want to hone that inner fire and make it grow. It’s what makes us and the games
+        we create so unique. As a studio, we have one mission: making the best video games possible.</p>
       <!-- Read More button -->
       <a class="w3-round readMoreButton" href="index.html">Read More</a>
     </div>
@@ -164,10 +162,9 @@
 
       <!-- Content description -->
       <p style="font-size:20px;">The studio is home to some of the industry’s best, professionals from all over the
-        globe with a shared love of web development.</p>
+        country with a shared love of web development.</p>
       <p style="font-size:17px;">Whether it’s through the unique atmosphere of the work environment we create or the
-        fresh approach to the projects we’re involved in, Hot Beans Web is a place that escapes the corporate-style
-        website development.</p>
+        fresh approach to the projects we’re involved in, Astral Forge is a place that allows every memeber of the team to be themselves and showcase their talent and skill.</p>
       <!-- Read More button -->
       <a class="w3-round readMoreButton" href="team.html">Read More</a>
     </div>
@@ -210,7 +207,7 @@
       <p class="w3-center" style="color:white; font-size:20px;">Privacy | Cookies</p>
     </div>
 
-    <p style="padding-top:250px; color:#cdcdcd; font-size:15px;">© 2022 Hot Beans Web. All rights reserved.</p>
+    <p style="padding-top:250px; color:#cdcdcd; font-size:15px;">© 2025 Astral Forge. All rights reserved.</p>
   </footer>
 
 </body>
