--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <!-- Side Picture -->
     <div class="w3-col w3-container l4">
       <!-- Placeholder -->
-      <img class="w3-image pictureOutline w3-hide-small" style="margin-top:36px; height:300px" src="PagePhotos/HomeBGLarge.jpg" alt="Lines of Code">
+      <img class="w3-image pictureOutline w3-hide-small" style="margin-top:36px; height:300px" src="Images /Astral Forge_Dark Horizontal Flat.svg" alt="Lines of Code">
     <img class="w3-image w3-hide-large w3-hide-medium pictureOutline" src="PagePhotos/HomeBGSmall.jpg" alt="Lines of Code" width="100%" height="200px">
     </div>
 
