--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <title>Astral Forge - Home</title>
 
   <!-- Adding a favicon -->
-  <link rel="icon" type="image/x-icon" href="Images /AstralForge_DarkVertical.svg">
+  <link rel="icon" type="image/x-icon" href="Images/AstralForge_LightVertical.svg">
   <!-- Adding an apple touch icon -->
-  <link rel="apple-touch-icon" href="Images /AstralForge_DarkVertical.svg">
+  <link rel="apple-touch-icon" href="Images/AstralForge_LightVertical.svg">
 
   <!-- Adding the css style sheets -->
   <link href="style.css" rel="stylesheet" type="text/css" />
@@ -46,8 +46,8 @@
     <a href="javascript:void(0)" id="hamburgerMenu" class="w3-bar-item w3-right topNavButton"
       onclick="myFunction()">&#9776;</a>
     <!-- Logo -->
-    <a href="index.html w3-hide-small" class="w3-left w3-hide-small w3-hide-medium"><img id="logoNav" src="Images /AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo and Name."></a>
-    <a href="index.html w3-hide-large w3-hide-medium" class="w3-left"><img id="logoNav" style="margin-top:-47px;" src="Images /AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo and Name."></a>
+    <a href="index.html w3-hide-small" class="w3-left w3-hide-small w3-hide-medium"><img id="logoNav" src="Images/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo and Name."></a>
+    <a href="index.html w3-hide-large w3-hide-medium" class="w3-left"><img id="logoNav" style="margin-top:-47px;" src="Images/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo and Name."></a>
     <!-- Aligns the links to the right and hides them on a small page -->
     <div class="w3-right w3-hide-small">
       <!-- Home -->
@@ -85,7 +85,7 @@
     <!-- Side Picture -->
     <div class="w3-col w3-container l4">
       <!-- Placeholder -->
-      <img class="w3-image pictureOutline w3-hide-small" style="margin-top:36px; height:300px" src="Images /AstralForge_DarkHorizontal.svg" alt="Lines of Code">
+      <img class="w3-image pictureOutline w3-hide-small" style="margin-top:36px; height:300px" src="Images/AstralForge_DarkHorizontal.svg" alt="Lines of Code">
     <img class="w3-image w3-hide-large w3-hide-medium pictureOutline" src="PagePhotos/HomeBGSmall.jpg" alt="Lines of Code" width="100%" height="200px">
     </div>
 
@@ -181,7 +181,7 @@
     <div class="w3-col w3-container w3-third"></div>
     <div class="w3-col w3-container w3-third w3-center">
       <!-- Logo -->
-      <a href="index.html"><img class="logoFooter" src="Astral Forge_Dark Vertical Flat.svg" alt="Astral Forge Logo and Name."></a>
+      <a href="index.html"><img class="logoFooter" src="Images/AstralForge_LightVertical.svg" alt="Astral Forge Logo and Name."></a>
     </div>
     <div class="w3-col w3-container w3-third" style="height:70px;"></div>
 
