--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   <p class="w3-center" style="font-size:25px; margin-top:-10px;">An indie company working to create fantasy worlds for our audiences to enjoy.</p>
 
   <!-- 3 section headings -->
-  <div class="w3-container">
+  <div class="w3-container w3-padding-bottom:25px;">
     <!-- Our History Header -->
     <div class="w3-third w3-container">
       <h2 class="w3-center w3-hide-small"><b>OUR HISTORY</b></h2>
