--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <a href="javascript:void(0)" id="hamburgerMenu" class="w3-bar-item w3-right topNavButton"
       onclick="myFunction()">&#9776;</a>
     <!-- Logo -->
-    <a href="index.html" class="w3-left w3-hide-small w3-hide-medium"><img class="w3-image" id="logoNav" src="Images/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo and Name."></a>
-    <a href="index.html" class="w3-left w3-hide-large w3-hide-medium"><img class="w3-image" id="logoNav" style="margin-top:-47px;" src="Images/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo and Name."></a>
+    <a href="index.html" class="w3-left w3-hide-small w3-hide-medium"><img class="w3-image logoNav" src="Images/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo and Name."></a>
+    <a href="index.html" class="w3-left w3-hide-large w3-hide-medium"><img class="w3-image logoNav" style="margin-top:-47px;" src="Images/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo and Name."></a>
     <!-- Aligns the links to the right and hides them on a small page -->
     <div class="w3-right w3-hide-small">
       <!-- Home -->
