--- a/index.html
+++ b/index.html
@@ -66,15 +66,7 @@
   <!-- Header video -->
   <header class="w3-display-container w3-content w3-wide pictureOutline" style="max-width:100%; padding-top:50px;">
     <!-- Large screen video -->
-    <video class="w3-hide-small w3-hide-medium" id="HBWHomeVideoL" onclick="HomeVideoL()" width="100%" autoplay loop muted>
-      <source src="PageVideos/HBWHomeL.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-    <!-- Small screen video -->
-    <video class="w3-hide-large" id="HBWHomeVideoS" onclick="HomeVideoS()" width="100%" autoplay loop muted>
-      <source src="PageVideos/HBWHomeS.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
+    <img src="Images/AstralForge_Light Contellation Pattern.svg" alt="Astral Forge Logo and Name.">
   </header>
 
   <!-- Company Moto -->
