--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <!-- Header video -->
   <header class="w3-display-container w3-content w3-wide pictureOutline" style="max-width:100%; padding-top:50px;">
     <!-- Large screen video -->
-    <img src="Images/AstralForge_Light Contellation Pattern.svg" alt="Astral Forge Logo and Name.">
+    <img src="Images/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern.">
   </header>
 
   <!-- Company Moto -->
