--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
   <!-- Navigation bar -->
   <div class="topNav w3-bar w3-top">
     <!-- Hamburger Menu -->
-    <a href="javascript:void(0)" id="hamburgerMenu" class="w3-bar-item w3-right topNavButton" style="padding-top:100px;"
+    <a href="javascript:void(0)" id="hamburgerMenu" class="w3-bar-item w3-right topNavButton" style="padding-top:40px;"
       onclick="myFunction()">&#9776;</a>
     <!-- Logo -->
     <a href="index.html"><img class="logoNav w3-left w3-hide-small w3-hide-medium" src="Images/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo and Name."></a>
     <a href="index.html" class="w3-left w3-hide-large"><img class="w3-image logoNav" style="margin-top:-47px;" src="Images/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo and Name."></a>
     <!-- Aligns the links to the right and hides them on a small page -->
-    <div class="w3-right w3-hide-small" style="padding-top:100px;">
+    <div class="w3-right w3-hide-small" style="padding-top:40px;">
       <!-- Home -->
       <a id="currentPage" class="w3-bar-item topNavLinks" href="index.html">Home</a>
       <!-- Team -->
@@ -66,7 +66,7 @@
   <!-- Header video -->
   <header class="w3-display-container w3-content w3-wide pictureOutline" style="max-width:100%; padding-top:50px;">
     <!-- Large screen video -->
-    <img style="max-height:50%;" src="Images/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern.">
+    <img height="200px" src="Images/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern.">
   </header>
 
   <!-- Company Moto -->
