--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 <!----------------------------------------------------------------------------- -->
   
   <!-- Header video -->
-  <header class="w3-display-container w3-content w3-wide pictureOutline" style="max-width:100%; padding-top:50px;">
+  <header class="w3-display-container w3-content w3-wide pictureOutline" style="max-width:100%; height:200px; overflow:hidden;"; padding-top:50px;">
     <!-- Large screen video -->
-    <img height="200px" src="Images/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern.">
+    <img style="height:auto; width:100%;" src="Images/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern.">
   </header>
 
   <!-- Company Moto -->
