--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <!----------------------------------------------------------------------------- -->
 
   <!-- Dropdown for the hamburger menu -->
-  <div id="menuLinks" class="w3-top w3-center w3-bar-block w3-black w3-hide hamburgerMenu w3-animate-opacity">
+  <div id="menuLinks" class="w3-top w3-center w3-bar-block w3-hide hamburgerMenu w3-animate-opacity" style="color:f3eaf5;">
     <a href="index.html" id="currentPage" class="w3-bar-item topNavLinks">Home</a>
     <a href="games.html" class="w3-bar-item topNavLinks">Games</a>
     <a href="team.html" class="w3-bar-item topNavLinks">Teams</a>
