--- a/index.html
+++ b/index.html
@@ -64,9 +64,13 @@
 <!----------------------------------------------------------------------------- -->
   
   <!-- Header video -->
-  <header class="w3-display-container w3-content w3-wide pictureOutline" style="max-width:100%; height:800px; overflow:hidden;"; padding-top:50px;">
+  <header class="w3-display-container w3-content w3-wide pictureOutline w3-hide-small" style="max-width:100%; height:800px; overflow:hidden;"; padding-top:50px;">
     <!-- Large screen video -->
     <img style="height:auto; width:100%;" src="Images/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern.">
+  </header>
+  <header class="w3-display-container w3-content w3-wide pictureOutline w3-hide-medium w2-hide-large" style="max-width:100%; height:400px; overflow:hidden;"; padding-top:50px;">
+    <!-- Large screen video -->
+    <img style="height:auto; width:100%;"src="Images/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern.">
   </header>
 
   <!-- Company Moto -->
