--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 <!----------------------------------------------------------------------------- -->
 
   <!-- Footer -->
-  <footer class="footer">
+  <footer class="footer" style="display:block;"> 
     <!-- Making space for a logo -->
     <div class="w3-row">
       <div class="w3-col w3-container w3-third"></div>
