--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       onclick="myFunction()">&#9776;</a>
     <!-- Logo -->
     <a href="index.html"><img class="logoNav w3-left w3-hide-small w3-hide-medium" src="Images/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo and Name."></a>
-    <a href="index.html" class="w3-centre w3-hide-large"><img class="w3-image logoNav" src="Images/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo and Name."></a>
+    <a href="index.html" class="w3-center w3-hide-large"><img class="w3-image logoNav" src="Images/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo and Name."></a>
     <!-- Aligns the links to the right and hides them on a small page -->
     <div class="w3-right w3-hide-small" style="padding-top:15px;">
       <!-- Home -->
@@ -179,7 +179,7 @@
         <!-- Logo -->
         <a href="index.html"><img class="logoFooter" src="Images/AstralForge_LightHorizontal.svg" alt="Astral Forge Logo and Name."></a>
       </div>
-      <div class="w3-col w3-container w3-third" style="height:70px;"></div>
+      <div class="w3-col w3-container w3-third"></div>
     </div>
 
     <div class="w3-row">
