--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
 <body>
   <script src="script.js"></script>
+  <main>
 
 <!-- Navigation Bar -->
 <!----------------------------------------------------------------------------- -->
@@ -166,6 +167,7 @@
   </div>
 
   <br>
+  </main>
 
 <!-- Footer -->
 <!----------------------------------------------------------------------------- -->
