--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
     <!-- Side Picture -->
     <div class="w3-col w3-container l4">
       <!-- Placeholder -->
-      <img class="w3-image pictureOutline w3-hide-small" style="margin-top:36px; height:300px" src="Images/AstralForge_DarkHorizontal.svg" alt="Lines of Code">
-    <img class="w3-image w3-hide-large w3-hide-medium pictureOutline" src="PagePhotos/HomeBGSmall.jpg" alt="Lines of Code" width="100%" height="200px">
+      <img class="w3-image pictureOutline w3-hide-small" style="margin-top:36px; height:300px" src="Images/The Team.png" alt="The Team">
+    <img class="w3-image w3-hide-large w3-hide-medium pictureOutline" src="Images/The Team.png" alt="The Team" width="100%" height="200px">
     </div>
 
     <!-- About Us section header -->
