--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
     <!-- Large screen video -->
     <div style="position: absolute;">
       <img style="height:auto; width:100%;" src="Images/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern.">
-      <img src="Images/AstralForge_DarkHorizontal" atl="Astral Forge Logo and Name">
+      <img class="w3-center" src="Images/AstralForge_DarkHorizontal" atl="Astral Forge Logo and Name">
     </div>
   </header>
   <header class="w3-display-container w3-content w3-wide pictureOutline w3-hide-medium w3-hide-large" style="max-width:100%; height:300px; overflow:hidden; padding-top:50px;">
     <!-- Large screen video -->
     <div style="position: absolute;">
-      <img style="height:auto; width:100%;"src="Images/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern.">
-      <img src="Images/AstralForge_DarkHorizontal" atl="Astral Forge Logo and Name">
+      <img style="height:auto; width:100%;" src="Images/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern.">
+      <img class="w3-center" src="Images/AstralForge_DarkHorizontal" atl="Astral Forge Logo and Name">
     </div>
   </header>
 
