--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
     <!-- Large screen video -->
     <div style="position: absolute;">
       <img id="bottom" style="height:auto; width:100%;" src="Images/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern.">
-      <img id="top" class="w3-center" src="Images/AstralForge_DarkHorizontal" alt="Astral Forge Logo and Name">
+      <img id="top" class="w3-center" style="top:0px; left:0px;" src="Images/AstralForge_DarkHorizontal" alt="Astral Forge Logo and Name">
     </div>
   </header>
   <header class="w3-display-container w3-content w3-wide pictureOutline w3-hide-medium w3-hide-large" style="max-width:100%; height:300px; overflow:hidden; padding-top:50px;">
     <!-- Large screen video -->
     <div style="position: absolute;">
       <img id="bottom" style="height:auto; width:100%;" src="Images/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern.">
-      <img id="top" class="w3-center" src="Images/AstralForge_DarkHorizontal" alt="Astral Forge Logo and Name">
+      <img id="top" class="w3-center" style="top:0px; left:0px;" src="Images/AstralForge_DarkHorizontal" alt="Astral Forge Logo and Name">
     </div>
   </header>
 
@@ -85,14 +85,14 @@
 
   <div class="w3-row">
     <!-- Side Picture -->
-    <div class="w3-col w3-container l0">
+    <div class="w3-col w3-container l2">
       <!-- Placeholder -->
       <img class="w3-image pictureOutline w3-hide-small" style="margin-top:36px; height:300px" src="Images/The Team.png" alt="The Team">
     <img class="w3-image w3-hide-large w3-hide-medium pictureOutline" src="Images/The Team.png" alt="The Team" width="100%" height="200px">
     </div>
 
     <!-- About Us section header -->
-    <div class="w3-col w3-container 22">
+    <div class="w3-col w3-container 20">
       <h1 class="w3-hide-small" style="font-size:30px;"><b>ABOUT US</b></h1>
       <h2 class="w3-hide-large w3-hide-medium w3-center" style="font-size:30px;"><b>ABOUT US</b></h2>
       <p style="font-size:20px;">Astral Forge is made up of a team of graduates from the University of Staffordshire and we are working to create immersive story-driven worlds for our players to explore and enjoy. We are a group of friends striving to put their mark on the games industry through our passion and dedication to the craft. Our team consists of programmers, designers, animators, artists, and more who are all experts in their area and are excited to show what they can do in a professional setting.</p>
