--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
   <header class="w3-display-container w3-content w3-wide pictureOutline w3-hide-small" style="max-width:100%; height:800px; overflow:hidden; padding-top:50px;">
     <!-- Large screen video -->
       <div><img id="bottom" style="height:auto; width:100%; position: absolute;" src="Images/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern."></div>
-      <div><img id="top" class="w3-center" style="top:0px; left:0px; position: absolute;" src="Images/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo and Name"></div>
+      <div><img id="top" class="w3-center" style="top:0px; left:0px; width:80%; position: absolute;" src="Images/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo and Name"></div>
   </header>
   <header class="w3-display-container w3-content w3-wide pictureOutline w3-hide-medium w3-hide-large" style="max-width:100%; height:300px; overflow:hidden; padding-top:50px;">
     <!-- Large screen video -->
       <div><img id="bottom" style="height:auto; width:100%; position: absolute;" src="Images/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern."></div>
-      <div>><img id="top" class="w3-center" style="top:0px; left:0px; position: absolute;" src="Images/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo and Name"></div>
+      <div>><img id="top" class="w3-center" style="top:80px; left:0px; position: absolute;" src="Images/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo and Name"></div>
   </header>
 
   <!-- Company Moto -->
