--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
   <header class="w3-display-container w3-content w3-wide pictureOutline w3-hide-small" style="max-width:100%; height:800px; overflow:hidden; padding-top:50px;">
     <!-- Large screen video -->
       <div><img id="bottom" style="height:auto; width:100%; position: absolute;" src="Images/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern."></div>
-      <div><img id="top" style="top:0px; left:0px; width:60%; position:absolute; display:block; margin:auto; text-align:center;" class="w3-center" src="Images/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo and Name"></div>
+      <div><img id="top" style="top:0px; left:0px; width:60%; position:absolute; text-align:center; justify-content:center;" class="w3-center" src="Images/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo and Name"></div>
   </header>
   <header class="w3-display-container w3-content w3-wide pictureOutline w3-hide-medium w3-hide-large" style="max-width:100%; height:300px; overflow:hidden; padding-top:50px;">
     <!-- Large screen video -->
       <div><img id="bottom" style="height:auto; width:100%; position: absolute;" src="Images/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern."></div>
-      <div>><img id="top" class="w3-center" style="top:80px; left:0px; position:absolute; display:block; margin:auto; text-align:center;" src="Images/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo and Name"></div>
+      <div>><img id="top" class="w3-center" style="top:80px; left:0px; position:absolute; text-align:center; justify-content:center;" src="Images/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo and Name"></div>
   </header>
 
   <!-- Company Moto -->
@@ -81,17 +81,22 @@
 
   <div class="w3-row">
     <!-- Side Picture -->
-    <div class="w3-col w3-container" style="width:30%">
+    <div class="w3-col w3-container w3-hide-small" style="width:30%">
       <!-- Placeholder -->
-      <img class="w3-image pictureOutline w3-hide-small" style="margin-top:40px; height:300px" src="Images/The Team.png" alt="The Team">
-    <img class="w3-image w3-hide-large w3-hide-medium pictureOutline" src="Images/The Team.png" alt="The Team" width="100%" height="200px">
+      <img class="w3-image pictureOutline" style="margin-top:40px; height:300px" src="Images/The Team.png" alt="The Team">
+    </div>
+    <div class="w3-col w3-container w3-center w3-hide-large w3-hide-medium">
+      <img class="w3-image pictureOutline" src="Images/The Team.png" alt="The Team" width="100%" height="200px">
     </div>
 
     <!-- About Us section header -->
-    <div class="w3-col w3-container" style="width:70%">
-      <h1 class="w3-hide-small" style="font-size:30px;"><b>ABOUT US</b></h1>
-      <h2 class="w3-hide-large w3-hide-medium w3-center" style="font-size:30px;"><b>ABOUT US</b></h2>
+    <div class="w3-col w3-container w3-hide-small" style="width:70%">
+      <h1 style="font-size:30px;"><b>ABOUT US</b></h1>
       <p style="font-size:20px;">Astral Forge is made up of a team of graduates from the University of Staffordshire and we are working to create immersive story-driven worlds for our players to explore and enjoy. We are a group of friends striving to put their mark on the games industry through our passion and dedication to the craft. Our team consists of programmers, designers, animators, artists, and more who are all experts in their area and are excited to show what they can do in a professional setting.</p>
+    </div>
+    <div class="w3-col w3-container w3-hide-large w3-hide-medium">
+      <h2 class="w3-center" style="font-size:20px;"><b>ABOUT US</b></h2>
+      <p style="font-size:10px;">Astral Forge is made up of a team of graduates from the University of Staffordshire and we are working to create immersive story-driven worlds for our players to explore and enjoy. We are a group of friends striving to put their mark on the games industry through our passion and dedication to the craft. Our team consists of programmers, designers, animators, artists, and more who are all experts in their area and are excited to show what they can do in a professional setting.</p>
     </div>
   </div>
 
