--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <!-- Side Picture -->
     <div class="w3-col w3-container w3-hide-small" style="width:30%">
       <!-- Placeholder -->
-      <img class="w3-image pictureOutline" style="margin-top:40px; height:300px" src="Images/The Team.png" alt="The Team">
+      <img class="w3-image pictureOutline" style="height:300px" src="Images/The Team.png" alt="The Team">
     </div>
     <div class="w3-col w3-container w3-center w3-hide-large w3-hide-medium">
       <img class="w3-image pictureOutline" src="Images/The Team.png" alt="The Team" width="100%" height="200px">
