--- a/index.html
+++ b/index.html
@@ -68,7 +68,12 @@
   <header class="w3-display-container w3-content w3-wide pictureOutline w3-hide-small" style="max-width:100%; height:800px; overflow:hidden; padding-top:50px;">
     <!-- Large screen video -->
       <div><img id="bottom" style="height:auto; width:100%; position:absolute;" src="Images/AstralForge_LightConstellationPattern.svg" alt="Astral Forge Light Constellation Pattern."></div>
-      <div class="w3-center"><img id="top" style="top:80px; left:0px; width:60%; position:absolute; text-align:center; justify-content:center;" class="w3-center" src="Images/AstralForge_DarkHorizontal.svg" alt="Astral Forge Logo and Name"></div>
+      <div style="position:relative; width:100%; height:100vh;">
+         <img id="top" 
+         src="Images/AstralForge_DarkHorizontal.svg" 
+         alt="Astral Forge Logo and Name"
+         style="position:absolute; top:50%; left:50%; transform:translate(-50%, -50%); width:60%;">
+    </div>
   </header>
   <header class="w3-display-container w3-content w3-wide pictureOutline w3-hide-medium w3-hide-large" style="max-width:100%; height:300px; overflow:hidden; padding-top:50px;">
     <!-- Large screen video -->
