--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
       <!-- Content description -->
       <p style="font-size:20px;">The studio is home to some of the industry’s best, professionals from all over the
-        country with a shared love of web development.</p>
+        country with a shared love of game development.</p>
       <p style="font-size:17px;">Whether it’s through the unique atmosphere of the work environment we create or the
         fresh approach to the projects we’re involved in, Astral Forge is a place that allows every memeber of the team to be themselves and showcase their talent and skill.</p>
       <!-- Read More button -->
@@ -220,7 +220,7 @@
       </div>
     </div>
 
-    <p style="padding-top:50px; color:#cdcdcd; font-size:15px;">© 2025 Astral Forge. All rights reserved.</p>
+    <p style="padding-left:10px; color:#cdcdcd; font-size:15px;">© 2025 Astral Forge. All rights reserved.</p>
   </footer>
 
 </body>
