--- a/index.html
+++ b/index.html
@@ -125,8 +125,10 @@
   <br>
 
   <!-- Section header -->
-  <h2 class="w3-center" style="font-size:30px;"><b>WELCOME TO ASTRAL FORGE,</b></h2>
-  <p class="w3-center" style="font-size:25px; margin-top:-10px;">An indie company working to create fantasy worlds for our audiences to enjoy.</p>
+  <h2 class="w3-center w3-hide-small" style="font-size:30px;"><b>WELCOME TO ASTRAL FORGE,</b></h2>
+  <h3 class="w3-center w3-hide-large w3-hide-medium" style="font-size:20px;"><b>WELCOME TO ASTRAL FORGE,</b></h3>
+  <p class="w3-center w3-hide-small" style="font-size:25px; margin-top:-10px;">An indie company working to create fantasy worlds for our audiences to enjoy.</p>
+  <p class="w3-center w3-hide-large w3-hide-medium" style="font-size:15px; margin-top:-10px;">An indie company working to create fantasy worlds for our audiences to enjoy.</p>
 
   <!-- 3 section headings -->
   <div class="w3-container w3-row">
@@ -138,9 +140,9 @@
       <br class="w3-hide-large"><br class="w3-hide-large">
 
       <!-- Content description -->
-      <p style="font-size:20px;">Established in 2025, remotely located across England, Astral Forge was born
+      <p style="font-size:15px;">Established in 2025, remotely located across England, Astral Forge was born
         out of a raw passion for video game development.</p>
-      <p style="font-size:15px;">The studio was created to allow our players to escape from reality and find worlds that truly feel like home. The sort of spaces that you would only find in the stars.</p>
+      <p style="font-size:10px;">The studio was created to allow our players to escape from reality and find worlds that truly feel like home. The sort of spaces that you would only find in the stars.</p>
       <!-- Read More button -->
       <a class="w3-round readMoreButton" href="index.html">Read More</a>
     </div>
@@ -153,9 +155,9 @@
       <br class="w3-hide-large"><br class="w3-hide-large">
 
       <!-- Content description -->
-      <p style="font-size:20px;">There is an inner fire, fuelled in every member of the studio. It comes from what we
+      <p style="font-size:15px;">There is an inner fire, fuelled in every member of the studio. It comes from what we
         surround ourselves with, from the hobbies we enjoy, from where we live, and who we are accompanied by.</p>
-      <p style="font-size:15px;">We want to hone that inner fire and make it grow. It’s what makes us and the games
+      <p style="font-size:10px;">We want to hone that inner fire and make it grow. It’s what makes us and the games
         we create so unique. As a studio, we have one mission: making the best video games possible.</p>
       <!-- Read More button -->
       <a class="w3-round readMoreButton" href="index.html">Read More</a>
@@ -169,9 +171,9 @@
       <br class="w3-hide-large"><br class="w3-hide-large">
 
       <!-- Content description -->
-      <p style="font-size:20px;">The studio is home to some of the industry’s best, professionals from all over the
+      <p style="font-size:15px;">The studio is home to some of the industry’s best, professionals from all over the
         country with a shared love of game development.</p>
-      <p style="font-size:15px;">Whether it’s through the unique atmosphere of the work environment we create or the
+      <p style="font-size:10px;">Whether it’s through the unique atmosphere of the work environment we create or the
         fresh approach to the projects we’re involved in, Astral Forge is a place that allows every memeber of the team to be themselves and showcase their talent and skill.</p>
       <!-- Read More button -->
       <a class="w3-round readMoreButton" href="team.html">Read More</a>
