--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <!-- Our History Header -->
     <div class="w3-third w3-container">
       <h2 class="w3-center w3-hide-small"><b>OUR HISTORY</b></h2>
-      <h3 class="w3-left w3-hide-large w3-hide-medium"><b>OUR HISTORY</b></h3>
+      <h3 class="w3-center w3-hide-large w3-hide-medium"><b>OUR HISTORY</b></h3>
       <!-- Correcting the layout between large and small devices -->
       <br class="w3-hide-large"><br class="w3-hide-large">
 
@@ -148,13 +148,13 @@
       <p class="w3-center w3-hide-small" style="font-size:15px;">The studio was created to allow our players to escape from reality and find worlds that truly feel like home. The sort of spaces that you would only find in the stars.</p>
       <p class="w3-center w3-hide-medium w3-hide-large" style="font-size:10px; text-align:center;">The studio was created to allow our players to escape from reality and find worlds that truly feel like home. The sort of spaces that you would only find in the stars.</p>
       <!-- Read More button -->
-      <a class="w3-round readMoreButton" href="index.html">Read More</a>
+      <a class="w3-round w3-center readMoreButton" href="index.html">Read More</a>
     </div>
 
     <!-- Our Mission Header -->
     <div class="w3-third w3-container">
       <h2 class="w3-center w3-hide-small"><b>OUR MISSION</b></h2>
-      <h3 class="w3-left w3-hide-large w3-hide-medium"><b>OUR MISSION</b></h3>
+      <h3 class="w3-center w3-hide-large w3-hide-medium"><b>OUR MISSION</b></h3>
       <!-- Correcting the layout between large and small devices -->
       <br class="w3-hide-large"><br class="w3-hide-large">
 
@@ -169,13 +169,13 @@
       <p class="w3-center w3-hide-medium w3-hide-large" style="font-size:10px; text-align:center;">We want to hone that inner fire and make it grow. It’s what makes us and the games
         we create so unique. As a studio, we have one mission: making the best video games possible.</p>
       <!-- Read More button -->
-      <a class="w3-round readMoreButton" href="index.html">Read More</a>
+      <a class="w3-round w3-center readMoreButton" href="index.html">Read More</a>
     </div>
 
     <!-- Meet the Team Header -->
     <div class="w3-third w3-container">
       <h2 class="w3-center w3-hide-small"><b>MEET THE TEAM</b></h2>
-      <h3 class="w3-left w3-hide-large w3-hide-medium"><b>MEET THE TEAM</b></h3>
+      <h3 class="w3-center w3-hide-large w3-hide-medium"><b>MEET THE TEAM</b></h3>
       <!-- Correcting the layout between large and small devices -->
       <br class="w3-hide-large"><br class="w3-hide-large">
 
@@ -190,7 +190,7 @@
       <p class="w3-center w3-hide-medium w3-hide-large" style="font-size:10px; text-align:center;">Whether it’s through the unique atmosphere of the work environment we create or the
         fresh approach to the projects we’re involved in, Astral Forge is a place that allows every memeber of the team to be themselves and showcase their talent and skill.</p>
       <!-- Read More button -->
-      <a class="w3-round readMoreButton" href="team.html">Read More</a>
+      <a class="w3-round w3-center readMoreButton" href="team.html">Read More</a>
     </div>
   </div>
 
