--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Astral Forge is a video game development company with a passion for creating immersive story-driven worlds for our players to explore and enjoy!">
   <meta name="keywords" content="Astral Forge, Video Games, AstralForge, Games, Fates Loop, Astral Forge Games, RPG, Role Playing Games, Indie Company">
   <meta name="author" content="Astral Forge">
