--- a/index.html
+++ b/index.html
@@ -260,9 +260,9 @@
         <!-- Social -->
         <h2 class="headingFooter"><b>SOCIAL</b></h2>
         <!-- Large screens -->
-        <a class="w3-hide-small" href="https://beacons.ai/AstralForge" target="_blank"><img class="socialFooterLarge" src="PagePhotos/FooterSocial.png" alt="Links to social media pages."></a>
-        <!-- Small/medium screens -->
-        <a class="w3-hide-large w3-hide-medium" href="https://beacons.ai/HotBeansWeb" target="_blank"><img class="socialFooterSmall" src="PagePhotos/FooterSocial.png" alt="Links to social media pages."></a>
+        <a href="https://www.instagram.com/astralforgeofficial/" target="_blank"><img class="socialFooterLarge" src="Images/InstagramLogo.png" alt="Link to Instagram."></a>
+        <a href="https://bsky.app/profile/astral-forge.bsky.social" target="_blank"><img class="socialFooterLarge" src="Images/Bluesky Logo.png" alt="Link to BlueSky."></a>
+        <a href="https://www.tiktok.com/@astralforgeofficial" target="_blank"><img class="socialFooterLarge" src="Images/TikTokLogo.png" alt="Link to TikTok."></a>
       </div>
       
       <div class="w3-col w3-container w3-third">
