--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   <!-- Quote slideshow small -->
   <div class="quoteContainerSmall w3-hide-large">
     <h2 class="quoteContainerTitle w3-center">QUOTES</h2>
-    <p class="item-1">“From the beginning, we received excellent advice and support setting up a new website. The team were efficient, knowledgeable, supportive and a pleasure to work with throughout the project.”</p>
+    <p class="item-1">“Sign up to our Mailing List!  https://astralforge.beehiiv.com/subscribe”</p>
     <p class="item-2">"An extremely knowledgeable agency that work as part of your team and understand your brand, as well as being lovely to work with day in, day out.”</p>
     <p class="item-3">“Thanks to their work as a third-party vendor, client satisfaction is up. Hot Beans Web proactive and experienced team helped anticipate issues, created a strong relationship that will likely extend to future collaborations.”</p>
   </div>
