--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Astral Forge">
   
   <!-- Changing the web page name depending on where the user is on the page -->
-  <title>Astral Forge - Home</title>
+  <title>Astral Forge</title>
 
   <!-- Adding a favicon -->
   <link rel="icon" type="image/x-icon" href="Images/AstralForge_LightVertical.svg">
