--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Astral Forge</title>
 
   <!-- Adding a favicon -->
-  <link rel="icon" type="image/x-icon" href="Images/AstralForge_LightVertical.svg">
+  <link rel="icon" href="Images/Favicon.png">
   <!-- Adding an apple touch icon -->
   <link rel="apple-touch-icon" href="Images/AstralForge_LightVertical.svg">
 
