--- a/index.html
+++ b/index.html
@@ -109,25 +109,25 @@
 
   <!-- Quote slideshow small -->
   <div class="quoteContainerSmall w3-hide-large">
-    <h2 class="quoteContainerTitle w3-center">Learn More</h2>
+    <h2 class="quoteContainerTitle w3-center">A Bit More</h2>
     <p class="item-1">Sign up to our Mailing List!<br> <a href="https://astralforge.beehiiv.com/subscribe" target="_blank">Click Here!</a></p>
-    <p class="item-2">
+    <p class="item-2">The main software that we are using:     
       <img class="qImages" src="Images/UnrealLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/MayaLogo.png" alt="Link to TikTok.">
       <img class="qImages" src="Images/MotionBuilderLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/PhotoshopLogo.png" alt="Link to TikTok.">
       <img class="qImages" src="Images/BlenderLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/SubstanceLogo.png" alt="Link to TikTok.">
       <img class="qImages" src="Images/ViconLogo.png" alt="Link to TikTok."></p>
-    <p class="item-3">“Thanks to their work as a third-party vendor, client satisfaction is up. Hot Beans Web proactive and experienced team helped anticipate issues, created a strong relationship that will likely extend to future collaborations.”</p>
+    <p class="item-3">Follow us on social media!<a href="https://beacons.ai/astralforge" target="_blank">Click Here!</a></p>  
   </div>
   <!-- Quote slideshow large -->
   <div class="quoteContainerLarge w3-hide-small w3-hide-medium">
-    <h2 class="quoteContainerTitle w3-center">Learn More</h2>
+    <h2 class="quoteContainerTitle w3-center">A Bit More</h2>
     <p class="item-1">Sign up to our Mailing List!<br> <a href="https://astralforge.beehiiv.com/subscribe" target="_blank">Click Here!</a></p>
-    <p class="item-2">
+    <p class="item-2">The main software that we are using:  
       <img class="qImages" src="Images/UnrealLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/MayaLogo.png" alt="Link to TikTok.">
       <img class="qImages" src="Images/MotionBuilderLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/PhotoshopLogo.png" alt="Link to TikTok.">
       <img class="qImages" src="Images/BlenderLogo.png" alt="Link to TikTok."><img class="qImages" src="Images/SubstanceLogo.png" alt="Link to TikTok.">
       <img class="qImages" src="Images/ViconLogo.png" alt="Link to TikTok."></p>
-    <p class="item-3">“Thanks to their work as a third-party vendor, client satisfaction is up. Hot Beans Web proactive and experienced team helped anticipate issues, created a strong relationship that will likely extend to future collaborations.”</p>
+    <p class="item-3">Follow us on social media!<a href="https://beacons.ai/astralforge" target="_blank">Click Here!</a></p>
   </div>
 
   <br>
